force-app/main/default/objects/Account/fields/Address_NSW_Point_validated_address__c.field-meta.xml
<CustomField>
    <fullName>Address_NSW_Point_validated_address__c</fullName>
    <description>Address_NSW_Point_validated_address__c</description>
    <inlineHelpText>Testing purpose</inlineHelpText>
    <label>Address (NSW Point validated address)</label>
    <type>Address</type>
</CustomField>