force-app/main/default/objects/Account/fields/Contact_Unique__c.field-meta.xml
<CustomField>
    <fullName>Contact_Unique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Unique</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact Unique)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>