force-app/main/default/objects/Account/fields/DemoPic__c.field-meta.xml
<CustomField>
    <fullName>DemoPic__c</fullName>
    <label>DemoPic</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>