force-app/main/default/objects/Account/fields/NumberValueInText__c.field-meta.xml
<CustomField>
    <fullName>NumberValueInText__c</fullName>
    <formula>TestAutoNumber__c</formula>
    <label>NumberValueInText</label>
    <type>Text</type>
</CustomField>