force-app/main/default/objects/Account/fields/numtest__c.field-meta.xml
<CustomField>
    <fullName>numtest__c</fullName>
    <label>numtest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>