force-app/main/default/objects/Account/fields/RichTextDisplayer__c.field-meta.xml
<CustomField>
    <fullName>RichTextDisplayer__c</fullName>
    <label>RichTextDisplayer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>