force-app/main/default/objects/Account/fields/State_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Field__c</fullName>
    <label>State Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>