force-app/main/default/objects/Account/fields/TemplateMaker__c.field-meta.xml
<CustomField>
    <fullName>TemplateMaker__c</fullName>
    <label>TemplateMaker</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>