force-app/main/default/objects/Account/fields/Test_date__c.field-meta.xml
<CustomField>
    <fullName>Test_date__c</fullName>
    <label>Test date</label>
    <type>Date</type>
</CustomField>