force-app/main/default/objects/Account/fields/TestAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>TestAutoNumber__c</fullName>
    <displayFormat>AC-{0000}</displayFormat>
    <label>TestAutoNumber</label>
    <type>AutoNumber</type>
</CustomField>