force-app/main/default/objects/Account/fields/testUrl__c.field-meta.xml
<CustomField>
    <fullName>testUrl__c</fullName>
    <label>testUrl</label>
    <type>Url</type>
</CustomField>