force-app/main/default/objects/Account/fields/Url_Field__c.field-meta.xml
<CustomField>
    <fullName>Url_Field__c</fullName>
    <formula>HYPERLINK(&quot;https://danocloud5-dev-ed.lightning.force.com/lightning/r/Account/0015g00001HAnu8AAD/view&quot;, &quot;Record Link&quot;)</formula>
    <label>Url Field</label>
    <type>Text</type>
</CustomField>