force-app/main/default/objects/Account/fields/Working__c.field-meta.xml
<CustomField>
    <fullName>Working__c</fullName>
    <label>Working</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Rating</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>EMA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>